--- a/composer.json
+++ b/composer.json
@@ -85,5 +85,8 @@
                 "      composer remove drupal/core-project-message"
             ]
         }
+    },
+    "require-dev": {
+        "drupal/core-dev": "^9.1"
     }
 }
