--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "drupal/console": "^1.9",
         "drupal/core-composer-scaffold": "^9.1",
         "drupal/core-project-message": "^9.1",
-        "drupal/core-recommended": "^9.1"
+        "drupal/core-recommended": "^9.1",
+        "drush/drush": "^10.3"
     },
     "conflict": {
         "drupal/drupal": "*"
