--- a/composer.json
+++ b/composer.json
@@ -20,12 +20,14 @@
         "drupal/core-composer-scaffold": "^9.1",
         "drupal/core-project-message": "^9.1",
         "drupal/core-recommended": "^9.1",
+        "drupal/gin": "^3.0",
+        "drupal/gin_toolbar": "^1.0@beta",
         "drush/drush": "^10.3"
     },
     "conflict": {
         "drupal/drupal": "*"
     },
-    "minimum-stability": "stable",
+    "minimum-stability": "dev",
     "prefer-stable": true,
     "config": {
         "sort-packages": true
