--- a/composer.json
+++ b/composer.json
@@ -81,5 +81,8 @@
                 "      composer remove drupal/core-project-message"
             ]
         }
+    },
+    "require-dev": {
+        "drush/drush": "^10.4"
     }
 }
