--- a/web/themes/custom/geoffreyvanwykdev/geoffreyvanwykdev.info.yml
+++ b/web/themes/custom/geoffreyvanwykdev/geoffreyvanwykdev.info.yml
@@ -1,22 +1,22 @@
-name: 'My Theme'
+name: 'Geoffrey van Wyk'
 type: theme
-description: 'Custom theme based on Tailwind CSS.'
+description: 'Custom base theme using Tailwind CSS.'
 core_version_requirement: ^8 || ^9
 base theme: false
 
 libraries:
-  - tailwindcss_theme/global_styles
+  - geoffreyvanwykdev/global_styles
 
 regions:
-  sidebar_first: 'Left sidebar'
-  sidebar_second: 'Right sidebar'
-  content: 'Content'
+  page_top: 'Page top'
   header: 'Header'
   primary_menu: 'Primary menu'
   secondary_menu: 'Secondary menu'
-  footer: 'Footer'
+  breadcrumb: 'Breadcrumb'
   highlighted: 'Highlighted'
   help: 'Help'
-  page_top: 'Page top'
+  content: 'Content'
+  sidebar_first: 'Left sidebar'
+  sidebar_second: 'Right sidebar'
+  footer: 'Footer'
   page_bottom: 'Page bottom'
-  breadcrumb: 'Breadcrumb'
