--- a/web/themes/custom/geoffreyvanwykdev/package.json
+++ b/web/themes/custom/geoffreyvanwykdev/package.json
@@ -15,6 +15,7 @@
     "gulp-purgecss": "^4.0.2",
     "gulp-sass": "^4.1.0",
     "postcss-import": "^14.0.0",
-    "tailwindcss": "^2.0.4"
+    "tailwindcss": "^2.0.4",
+    "tailwindcss-hero-patterns": "^0.0.1"
   }
 }
