chore(cfg): Set site slogan and logo

--- a/web/sites/default/files/config_bH5dNlPaG9XufsRBWJ0xTCW9MgLv5Sph9QyXKhpsyHR9e8EAAgce677eiVdLI5C8MIJzVqLp_A/sync/system.site.yml
+++ b/web/sites/default/files/config_bH5dNlPaG9XufsRBWJ0xTCW9MgLv5Sph9QyXKhpsyHR9e8EAAgce677eiVdLI5C8MIJzVqLp_A/sync/system.site.yml
@@ -1,7 +1,7 @@
 uuid: 036ac525-ae4b-402a-b4ee-a50991b1c6b5
 name: 'Geoffrey van Wyk'
 mail: geoffrey@vanwyk.biz
-slogan: ''
+slogan: 'Computer Programmer'
 page:
   403: ''
   404: ''
