--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,13 @@
     "require": {
         "composer/installers": "^1.2",
         "drupal/content_sync": "^2.1",
+        "drupal/copyright_block": "^1.0@RC",
         "drupal/core-composer-scaffold": "^8.8",
         "drupal/core-project-message": "^8.8",
         "drupal/core-recommended": "^8.8",
         "drupal/menu_link_attributes": "^1.2",
-        "drush/drush":  "^10.4"
+        "drupal/token": "^1.9",
+        "drush/drush": "^10.4"
     },
     "conflict": {
         "drupal/drupal": "*"
