chore(theme): Replace Gulp with Vite
I followed the example of https://github.com/segovia94/drupal-vite-poc

--- a/web/themes/custom/geoffreyvanwykdev/geoffreyvanwykdev.libraries.yml
+++ b/web/themes/custom/geoffreyvanwykdev/geoffreyvanwykdev.libraries.yml
@@ -2,4 +2,14 @@ global_styles:
   version: VERSION
   css:
     theme:
-      css/styles.css: {}
+      styles/style.css: {}
+
+global_javascript:
+  dependencies:
+    - core/jquery
+    - core/drupalSettings
+
+hot_module_replacement:
+  header: true
+  js:
+    http://localhost:12321/@vite/client: {type: external, attributes: { type: 'module'}}
