--- a/web/themes/custom/geoffreyvanwykdev/package.json
+++ b/web/themes/custom/geoffreyvanwykdev/package.json
@@ -3,23 +3,13 @@
   "version": "1.0.0",
   "description": "\"My custom Drupal theme for my blog, styled with Tailwind CSS.\"",
   "main": "index.js",
-  "scripts": {
-    "start": "vite",
-    "build": "vite build"
-  },
   "author": "Geoffrey van Wyk <geoffrey@vanwyk.biz>",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
-    "autoprefixer": "^10.3.7",
-    "browser-sync": "^2.27.5",
-    "browser-sync-webpack-plugin": "^2.3.0",
-    "laravel-mix": "^6.0.34",
-    "mix-tailwindcss": "^1.3.0",
-    "postcss": "^8.3.9",
-    "resolve-url-loader": "^4.0.0",
-    "sass": "^1.43.2",
-    "sass-loader": "^12.2.0",
-    "tailwindcss": "^2.0.4",
+    "@tailwindcss/typography": "^0.5.0",
+    "autoprefixer": "^10.4.1",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.8",
     "tailwindcss-hero-patterns": "^0.0.1"
   }
 }
