--- a/web/themes/custom/geoffreyvanwykdev/package.json
+++ b/web/themes/custom/geoffreyvanwykdev/package.json
@@ -6,6 +6,7 @@
   "author": "Geoffrey van Wyk <geoffrey@vanwyk.biz>",
   "license": "GPL-3.0-or-later",
   "devDependencies": {
+    "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
